# MathEngine

./: CMakeLists.txt  LICENSE  README.md
data/: identities.txt
src/: ExprManip.cpp  ExprManip.h  ExprNode.cpp  ExprNode.h  ExprParser.cpp  ExprParser.h  ExprSearch.cpp  ExprSearch.h  Framework.h  Hash.cpp  Hash.h  IdentityDB.cpp  IdentityDB.h  Int.h  Operator.h  Value.h  Variable.h
src/BaseTypes/: Int.cpp  Int.h  Operator.h
